WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140238
Borders inside box-decoration-break: clone after a br do not contribute to line breaking
https://bugs.webkit.org/show_bug.cgi?id=140238
Summary
Borders inside box-decoration-break: clone after a br do not contribute to li...
Myles C. Maxfield
Reported
2015-01-07 19:38:55 PST
Borders inside box-decoration-break: clone after a br do not contribute to line breaking
Attachments
Patch
(6.26 KB, patch)
2015-01-07 19:43 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-01-07 19:43:40 PST
Created
attachment 244235
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-08 08:15:05 PST
Comment on
attachment 244235
[details]
Patch Clearing flags on attachment: 244235 Committed
r178114
: <
http://trac.webkit.org/changeset/178114
>
WebKit Commit Bot
Comment 3
2015-01-08 08:15:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug