Borders inside box-decoration-break: clone after a br do not contribute to line breaking https://bugs.webkit.org/show_bug.cgi?id=140238

Reviewed by Darin Adler.

Source/WebCore:

When we iterate through renderers for line breaking, we determine which of the renderers
is responsible for inserting its parent's border width. However, this determination didn't
take a <br> and box-decoration-break: clone into account.

Test: fast/box-decoration-break/box-decoration-break-clone-line-break.html

* rendering/line/BreakingContextInlineHeaders.h:
(WebCore::shouldAddBorderPaddingMargin):
(WebCore::previousInFlowSibling): Clean up to use a do / while block.

LayoutTests:

* fast/box-decoration-break/box-decoration-break-clone-line-break-expected.html: Added.
* fast/box-decoration-break/box-decoration-break-clone-line-break.html: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/158211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178114 268f45cc-cd09-0410-ab3c-d52691b4dbfc